--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Computer Basics</a>
+        </div>
+    </div>
+    </nav>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
