--- a/index.html
+++ b/index.html
@@ -4,27 +4,78 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Computer Basics</title>
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
 
   </head>
   <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Computer Basics</a>
-        </div>
-    </div>
-    </nav>
-    <h1>25 September, 2018</h1>
-    <h2>Syllabus</h2>
-    <h2>Correo electrónico</h2>
-    <h2>Tutorial</h2>
-    
-    <div class="card">Mouse tutorial</div>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+          <a class="navbar-brand" href="#"><i class="material-icons">desktop_windows</i> Computer Basics</a>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
+<ul class="pull-right nav navbar-nav navbar-right">
+    <li class="dropdown">
+      <a href="#" class="text-light dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">English <span class="caret"></span></a>
+      <ul class="dropdown-menu" role="menu">
+        <li><a href="#">Español</a></li>
+        <li><a href="#">English</a></li>
+      </ul>
+    </li>
+  </ul>
+
+    </nav>
+  <main role="main">
+  <div class="jumbotron">
+    <div class="container">
+    <h1>25 September, 2018</h1>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4"> 
+        <h2>Syllabus</h2>
+        <a class="btn btn-success" href="https://docs.google.com/document/d/1ClEXl0bY07SVTGk-gSwBcJTGG6CqkMQBSB6zWMtk7E8/edit?usp=sharing">Syllabus &raquo;</a>
+      </div> 
+      <div class="col-md-4"> 
+        <h2>Correo electrónico</h2>
+https://drive.google.com/file/d/0BwvCoIaVTUkRZVRCbGVUNFMxa2c/view?usp=sharing
+https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing
+      </div> 
+      <div class="col-md-4"> 
+        <h2>Computer Basics Tutorial</h2>
+http://www.gcflearnfree.org/computerbasics/what-is-a-computer/1/
+https://www.gcfaprendelibre.org/tecnologia/curso/informatica_basica/empezando_a_usar_un_computador/1.do
+      </div> 
+    </div> <!-- row -->
+    <hr />
+
+    <div class="row">
+      <div class="col-md-4"> 
+        <h2>Mouse Basics Tutorial</h2>
+http://www.skillfulsenior.com/skills/mouse/index.php
+https://www.jigsawplanet.com/
+      </div> 
+      <div class="col-md-4"> 
+        <h2>Log in to Quizlet</h2>
+https://quizlet.com/95415789/parts-of-a-computer-vocabulary-flash-cards/
+https://drive.google.com/file/d/0BwvCoIaVTUkRVnhOelVOZlU0NGM/view?usp=sharing
+      </div> 
+      <div class="col-md-4"> 
+        <h2>Typing</h2>
+        <a class="btn btn-success" href="https://drive.google.com/file/d/0BwvCoIaVTUkReHI3d0Vua0s4TUk/view?usp=sharing">Typing Test Instructions</a>
+        <a class="btn btn-success" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
+      </div> 
+    </div> <!-- row -->
+
+
+
+  </div> <!-- container -->
+  </main>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
