--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Use btn-info for instructions, btn-success for links -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,7 +18,7 @@
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
           <a class="navbar-brand" href="#"><i class="material-icons">desktop_windows</i> Computer Basics</a>
 
-
+<!--
 <ul class="pull-right nav navbar-nav navbar-right">
     <li class="dropdown">
       <a href="#" class="text-light dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">English <span class="caret"></span></a>
@@ -26,6 +28,7 @@
       </ul>
     </li>
   </ul>
+-->
 
     </nav>
   <main role="main">
@@ -42,27 +45,27 @@
       </div> 
       <div class="col-md-4"> 
         <h2>Correo electrónico</h2>
-https://drive.google.com/file/d/0BwvCoIaVTUkRZVRCbGVUNFMxa2c/view?usp=sharing
-https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing
+<!--<a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRZVRCbGVUNFMxa2c/view?usp=sharing">Send your teacher an email</a>-->
+<a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
       </div> 
       <div class="col-md-4"> 
         <h2>Computer Basics Tutorial</h2>
-http://www.gcflearnfree.org/computerbasics/what-is-a-computer/1/
-https://www.gcfaprendelibre.org/tecnologia/curso/informatica_basica/empezando_a_usar_un_computador/1.do
+<a class="btn btn-success" href="http://www.gcflearnfree.org/computerbasics/what-is-a-computer/1/">Tutorial en inglés</a>
+<a class="btn btn-success" href="https://www.gcfaprendelibre.org/tecnologia/curso/informatica_basica/empezando_a_usar_un_computador/1.do">Tutorial en español</a>
       </div> 
     </div> <!-- row -->
     <hr />
 
     <div class="row">
       <div class="col-md-4"> 
-        <h2>Mouse Basics Tutorial</h2>
-http://www.skillfulsenior.com/skills/mouse/index.php
-https://www.jigsawplanet.com/
+        <h2><i class="material-icons">mouse</i>El ratón</h2>
+        <a class="btn btn-success" href="http://www.skillfulsenior.com/skills/mouse/index.php">Tutorial</a>
+                                 <a class="btn btn-success" href="https://www.jigsawplanet.com/">Práctica para el ratón</a>
       </div> 
       <div class="col-md-4"> 
         <h2>Log in to Quizlet</h2>
-https://quizlet.com/95415789/parts-of-a-computer-vocabulary-flash-cards/
-https://drive.google.com/file/d/0BwvCoIaVTUkRVnhOelVOZlU0NGM/view?usp=sharing
+<a class="btn btn-success" href="https://quizlet.com/95415789/parts-of-a-computer-vocabulary-flash-cards/">Flash cards</a>
+<a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRVnhOelVOZlU0NGM/view?usp=sharing">Instrucciones</a>
       </div> 
       <div class="col-md-4"> 
         <h2>Typing</h2>
