--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <a class="navbar-brand" href="#"><i class="material-icons">desktop_windows</i> Computer Basics</a>
+          <span class="navbar-brand" href="#"><i class="material-icons">desktop_windows</i> Computer Basics - http://tinyurl.com/2018computer</span>
 
 <!--
 <ul class="pull-right nav navbar-nav navbar-right">
@@ -40,16 +40,16 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4"> 
-        <h2><i class="material-icons">school</i>Syllabus</h2>
+        <h2><i class="material-icons">school</i> Syllabus</h2>
         <a class="btn btn-success" href="https://docs.google.com/document/d/1ClEXl0bY07SVTGk-gSwBcJTGG6CqkMQBSB6zWMtk7E8/edit?usp=sharing">Syllabus &raquo;</a>
       </div> 
       <div class="col-md-4"> 
-        <h2><i class="material-icons">email</i>Correo electrónico</h2>
+        <h2><i class="material-icons">email</i> Email</h2>
 <!--<a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRZVRCbGVUNFMxa2c/view?usp=sharing">Send your teacher an email</a>-->
 <a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
       </div> 
       <div class="col-md-4"> 
-        <h2><i class="material-icons">computer</i>Computer Basics Tutorial</h2>
+        <h2><i class="material-icons">computer</i> Computer Basics Tutorial</h2>
 <a class="btn btn-success" href="http://www.gcflearnfree.org/computerbasics/what-is-a-computer/1/">Tutorial en inglés</a>
 <a class="btn btn-success" href="https://www.gcfaprendelibre.org/tecnologia/curso/informatica_basica/empezando_a_usar_un_computador/1.do">Tutorial en español</a>
       </div> 
@@ -58,17 +58,17 @@
 
     <div class="row">
       <div class="col-md-4"> 
-        <h2><i class="material-icons">mouse</i>El ratón</h2>
+        <h2><i class="material-icons">mouse</i> El ratón</h2>
         <a class="btn btn-success" href="http://www.skillfulsenior.com/skills/mouse/index.php">Tutorial</a>
                                  <a class="btn btn-success" href="https://www.jigsawplanet.com/">Práctica para el ratón</a>
       </div> 
       <div class="col-md-4"> 
-        <h2><i class="material-icons">assessment</i>Log in to Quizlet</h2>
+        <h2><i class="material-icons">assessment</i> Log in to Quizlet</h2>
 <a class="btn btn-success" href="https://quizlet.com/95415789/parts-of-a-computer-vocabulary-flash-cards/">Flash cards</a>
 <a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRVnhOelVOZlU0NGM/view?usp=sharing">Instrucciones</a>
       </div> 
       <div class="col-md-4"> 
-        <h2><i class="material-icons">keyboard</i>Typing</h2>
+        <h2><i class="material-icons">keyboard</i> Typing</h2>
         <a class="btn btn-success" href="https://drive.google.com/file/d/0BwvCoIaVTUkReHI3d0Vua0s4TUk/view?usp=sharing">Typing Test Instructions</a>
         <a class="btn btn-success" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
       </div> 
