--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
     <div class="row">
       <div class="col-md-4"> 
-        <h2><i class="material-icons">mouse</i> El ratón</h2>
+        <h2><i class="material-icons">mouse</i> Mouse</h2>
         <a class="btn btn-success" href="http://www.skillfulsenior.com/skills/mouse/index.php">Tutorial</a>
-                                 <a class="btn btn-success" href="https://www.jigsawplanet.com/">Práctica para el ratón</a>
+                                 <a class="btn btn-success" href="https://www.jigsawplanet.com/">Mouse practice</a>
       </div> 
       <div class="col-md-4"> 
         <h2><i class="material-icons">assessment</i> Log in to Quizlet</h2>
