--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       <div class="col-md-4"> 
         <h2><i class="material-icons">email</i> Email</h2>
 <!--<a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRZVRCbGVUNFMxa2c/view?usp=sharing">Send your teacher an email</a>-->
-<a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
+<a class="btn btn-success" href="https://www.linnbenton.edu/current-students/involvement/lbcc-student-email/">Instructions for your email</a>
+<br /><a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
       </div> 
       <div class="col-md-4"> 
         <h2><i class="material-icons">computer</i> Computer Basics Tutorial</h2>
