--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="col-md-4"> 
         <h2><i class="material-icons">keyboard</i> Typing</h2>
         <a class="btn btn-success" href="https://drive.google.com/file/d/0BwvCoIaVTUkReHI3d0Vua0s4TUk/view?usp=sharing">Typing Test Instructions</a>
-        <a class="btn btn-success" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
+        <br /><a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
       </div> 
     </div> <!-- row -->
 
