--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     </nav>
   <main role="main">
-  <div class="jumbotron">
+  <div class="jumbotron" style="background-image: url(address_bar.gif)">
     <div class="container">
     <h1>25 September, 2018</h1>
     </div>
