--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     </nav>
   <main role="main">
-  <div class="jumbotron" style="background-image: url(address_bar.gif)">
-    <div class="container">
+  <div class="jumbotron" style="background-image: url(address_bar.gif);height: 200px;margin-top:12px;">
+    <div class="container bg-dark">
     <h1>25 September, 2018</h1>
     </div>
   </div>
