--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="col-md-4"> 
         <h2><i class="material-icons">assessment</i> Vocabulary</h2>
 <a class="btn btn-success" href="https://quizlet.com/95415789/parts-of-a-computer-vocabulary-flash-cards/">Flash cards</a>
-<a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRVnhOelVOZlU0NGM/view?usp=sharing">Instrucciones</a>
+<a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRVnhOelVOZlU0NGM/view?usp=sharing">Instructions</a>
       </div> 
       <div class="col-md-4"> 
         <h2><i class="material-icons">keyboard</i> Typing</h2>
