--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       <div class="col-md-4"> 
         <h2><i class="material-icons">email</i> Email / Correo electrónico</h2>
 <!--<a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRZVRCbGVUNFMxa2c/view?usp=sharing">Send your teacher an email</a>-->
-<a class="btn btn-success" href="https://www.linnbenton.edu/current-students/involvement/lbcc-student-email/">Instructions for your email</a>
+<a class="btn btn-success" href="https://www.linnbenton.edu/current-students/involvement/lbcc-student-email/">Email &raquo;</a>
 <br /><a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
       </div> 
       <div class="col-md-4"> 
         <h2><i class="material-icons">computer</i> Computer Basics Tutorial / Informática básica</h2>
-<a class="btn btn-success" href="http://www.gcflearnfree.org/computerbasics/what-is-a-computer/1/">Tutorial en inglés</a>
-<a class="btn btn-success" href="https://www.gcfaprendelibre.org/tecnologia/curso/informatica_basica/empezando_a_usar_un_computador/1.do">Tutorial en español</a>
+<a class="btn btn-success" href="http://www.gcflearnfree.org/computerbasics/what-is-a-computer/1/">Tutorial en inglés &raquo;</a>
+<a class="btn btn-success" href="https://www.gcfaprendelibre.org/tecnologia/curso/informatica_basica/empezando_a_usar_un_computador/1.do">Tutorial en español &raquo;</a>
       </div> 
     </div> <!-- row -->
     <hr />
@@ -58,17 +58,18 @@
     <div class="row">
       <div class="col-md-4"> 
         <h2><i class="material-icons">mouse</i> Mouse / El ratón</h2>
-        <a class="btn btn-success" href="http://www.skillfulsenior.com/skills/mouse/index.php">Tutorial</a>
-                                 <a class="btn btn-success" href="https://www.jigsawplanet.com/">Mouse practice</a>
+        <a class="btn btn-success" href="http://www.skillfulsenior.com/skills/mouse/index.php">Tutorial &raquo;</a>
+                                 <a class="btn btn-success" href="https://www.jigsawplanet.com/">Mouse practice &raquo;</a>
       </div> 
       <div class="col-md-4"> 
         <h2><i class="material-icons">assessment</i> Vocabulary / Vocabulario</h2>
-<a class="btn btn-success" href="https://quizlet.com/95415789/parts-of-a-computer-vocabulary-flash-cards/">Flash cards</a>
+<a class="btn btn-success" href="https://quizlet.com/95415789/parts-of-a-computer-vocabulary-flash-cards/">Flash cards &raquo;</a>
 <a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRVnhOelVOZlU0NGM/view?usp=sharing">Instructions</a>
       </div> 
       <div class="col-md-4"> 
-        <h2><i class="material-icons">keyboard</i> Typing / El teclado</h2>
-        <a class="btn btn-success" href="https://drive.google.com/file/d/0BwvCoIaVTUkReHI3d0Vua0s4TUk/view?usp=sharing">Typing Test Instructions</a>
+        <h2><i class="material-icons">keyboard</i> Keyboard / El teclado</h2>
+        <a class="btn btn-success" href="http://typing.com>Typing.com &raquo;</a>
+        <a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkReHI3d0Vua0s4TUk/view?usp=sharing">Typing Test Instructions</a>
         <br /><a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
       </div> 
     </div> <!-- row -->
