--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div> 
       <div class="col-md-4"> 
         <h2><i class="material-icons">keyboard</i> Keyboard / El teclado</h2>
-        <a class="btn btn-success" href="http://typing.com>Typing.com &raquo;</a>
+        <a class="btn btn-success" href="http://typing.com">Typing.com &raquo;</a>
         <a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkReHI3d0Vua0s4TUk/view?usp=sharing">Typing Test Instructions</a>
         <br /><a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
       </div> 
