--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a class="btn btn-success" href="https://docs.google.com/document/d/1ClEXl0bY07SVTGk-gSwBcJTGG6CqkMQBSB6zWMtk7E8/edit?usp=sharing">Syllabus &raquo;</a>
       </div> 
       <div class="col-md-4"> 
-        <h2><i class="material-icons">email</i> Email / Correo electrónico</h2>
+        <h2><i class="material-icons">email</i> Email / Correo electrónico</h2><br /><br />
 <!--<a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRZVRCbGVUNFMxa2c/view?usp=sharing">Send your teacher an email</a>-->
 <a class="btn btn-success" href="https://www.linnbenton.edu/current-students/involvement/lbcc-student-email/">Email &raquo;</a>
 <br /><a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
@@ -68,9 +68,9 @@
       </div> 
       <div class="col-md-4"> 
         <h2><i class="material-icons">keyboard</i> Keyboard / El teclado</h2>
-        <a class="btn btn-success" href="http://typing.com">Typing.com &raquo;</a>
+        <a class="btn btn-success" href="http://typing.com">Typing.com &raquo;</a><br /><br />
         <a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkReHI3d0Vua0s4TUk/view?usp=sharing">Typing Test Instructions</a>
-        <br /><a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
+        <br /><br /><a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
       </div> 
     </div> <!-- row -->
 
