--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       </div> 
       <div class="col-md-4"> 
         <h2><i class="material-icons">email</i> Email / Correo electrónico</h2><br /><br />
-<!--<a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRZVRCbGVUNFMxa2c/view?usp=sharing">Send your teacher an email</a>-->
 <a class="btn btn-success" href="https://www.linnbenton.edu/current-students/involvement/lbcc-student-email/">Email &raquo;</a>
 <br /><a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
+<a class="btn btn-info" href="https://drive.google.com/file/d/13ykgG7Vx1dRRbR8UjwYOhagt1vouWELe/view?usp=sharing">Instructions for sending your teacher an email</a>
       </div> 
       <div class="col-md-4"> 
         <h2><i class="material-icons">computer</i> Computer Basics Tutorial / Informática básica</h2>
