--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
         <br /><br /><a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
       </div> 
     </div> <!-- row -->
+    
+        <div class="row">
+      <div class="col-md-4"> 
+        <h2><i class="material-icons">insert_drive_file</i> Google Docs</h2>
+        <a class="btn btn-success" href="https://drive.google.com">Google Docs &raquo;</a>
+      </div> 
+    </div> <!-- row -->
 
 
 
