--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+	  
+	<style>
+	.row {
+	  margin-top: 36px;
+	}
+	.btn {
+	  margin-top: 5px;
+	}
+	</style>
 
 
   </head>
@@ -31,52 +40,40 @@
 -->
 
     </nav>
-  <main role="main">
-  <div class="jumbotron" style="background-image: url(address_bar.gif);height: 250px;margin-top:25px;">
-  </div>
-        <hr />
+  <main role="main" style="margin-top: 100px;">
   <div class="container">
     <div class="row">
       <div class="col-md-4"> 
-        <h2><i class="material-icons">school</i> Syllabus / Plan del curso</h2>
-        <a class="btn btn-success" href="https://docs.google.com/document/d/1ClEXl0bY07SVTGk-gSwBcJTGG6CqkMQBSB6zWMtk7E8/edit?usp=sharing">Syllabus &raquo;</a>
-      </div> 
-      <div class="col-md-4"> 
-        <h2><i class="material-icons">email</i> Email / Correo electrónico</h2><br /><br />
-<a class="btn btn-success" href="https://www.linnbenton.edu/current-students/involvement/lbcc-student-email/">Email &raquo;</a>
-<br /><a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
-<a class="btn btn-info" href="https://drive.google.com/file/d/13ykgG7Vx1dRRbR8UjwYOhagt1vouWELe/view?usp=sharing">Instructions for sending your teacher an email</a>
-      </div> 
-      <div class="col-md-4"> 
-        <h2><i class="material-icons">computer</i> Computer Basics Tutorial / Informática básica</h2>
-<a class="btn btn-success" href="http://www.gcflearnfree.org/computerbasics/what-is-a-computer/1/">Tutorial en inglés &raquo;</a>
-<a class="btn btn-success" href="https://www.gcfaprendelibre.org/tecnologia/curso/informatica_basica/empezando_a_usar_un_computador/1.do">Tutorial en español &raquo;</a>
-      </div> 
+        <h2><i class="material-icons">keyboard</i> Keyboard / El teclado</h2>
+      </div>
+      <div class="col-md-8">
+         <a class="btn btn-success" href="http://typing.com">Typing.com &raquo;</a><br />
+        <a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkReHI3d0Vua0s4TUk/view?usp=sharing">Typing Test Instructions</a>
+        <a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
+		<!-- MAKE A GOAL for speed or accuracy -->
+     </div>
     </div> <!-- row -->
-    <hr />
-
+	  
     <div class="row">
       <div class="col-md-4"> 
-        <h2><i class="material-icons">mouse</i> Mouse / El ratón</h2>
-        <a class="btn btn-success" href="http://www.skillfulsenior.com/skills/mouse/index.php">Tutorial &raquo;</a>
-                                 <a class="btn btn-success" href="https://www.jigsawplanet.com/">Mouse practice &raquo;</a>
+        <h2><i class="material-icons">email</i> Email / Correo electrónico</h2>
+		<!-- * Formal email to me with an attachment (image)
+* Write an email to me, attaching something from google drive -->
+	  </div>
+      <div class="col-md-8">
+        <a class="btn btn-success" href="https://www.linnbenton.edu/current-students/involvement/lbcc-student-email/">Email &raquo;</a>
+        <br /><a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
+        <a class="btn btn-info" href="https://drive.google.com/file/d/13ykgG7Vx1dRRbR8UjwYOhagt1vouWELe/view?usp=sharing">Instructions for sending your teacher an email</a>
       </div> 
-      <div class="col-md-4"> 
-        <h2><i class="material-icons">assessment</i> Vocabulary / Vocabulario</h2>
-<a class="btn btn-success" href="https://quizlet.com/95415789/parts-of-a-computer-vocabulary-flash-cards/">Flash cards &raquo;</a>
-<a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRVnhOelVOZlU0NGM/view?usp=sharing">Instructions</a>
-      </div> 
-      <div class="col-md-4"> 
-        <h2><i class="material-icons">keyboard</i> Keyboard / El teclado</h2>
-        <a class="btn btn-success" href="http://typing.com">Typing.com &raquo;</a><br /><br />
-        <a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkReHI3d0Vua0s4TUk/view?usp=sharing">Typing Test Instructions</a>
-        <br /><br /><a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
-      </div> 
-    </div> <!-- row -->
-    
-        <div class="row">
+	</div>
+	  <!-- Extras:
+* https://quizlet.com/160522289/email-vocabulary-combined-15-terms-flash-cards/ -->
+	  
+    <div class="row">
       <div class="col-md-4"> 
         <h2><i class="material-icons">insert_drive_file</i> Google Docs</h2>
+      </div>
+	  <div class="col-md-8">
         <a class="btn btn-success" href="https://drive.google.com">Google Docs &raquo;</a>
       </div> 
     </div> <!-- row -->
