--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 	.btn {
 	  margin-top: 5px;
 	}
+	h2 {
+         font-weight: 100;
+	 font-size: 1.8em;
+	 color: #8b0000;
+	 letter-spacing: 1px;
+        }
+	h3 {
+	 font-size: 1.4em;
+	}
 	</style>
 
 
@@ -44,30 +53,52 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4"> 
-        <h2><i class="material-icons">keyboard</i> Keyboard / El teclado</h2>
+	      <h2><i class="material-icons">keyboard</i> Take your typing test </h2><h3>Tome su prueba de mecanografía</h3>
       </div>
       <div class="col-md-8">
-         <a class="btn btn-success" href="http://typing.com">Typing.com &raquo;</a><br />
+        <a class="btn btn-success" href="http://typing.com">Typing.com &raquo;</a><br />
         <a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkReHI3d0Vua0s4TUk/view?usp=sharing">Typing Test Instructions</a>
-        <a class="btn btn-info" href="https://drive.google.com/file/d/0BwvCoIaVTUkRMmdvSkp3R3BwZWs/view">Typing Practice Instructions</a>
-		<!-- MAKE A GOAL for speed or accuracy -->
      </div>
     </div> <!-- row -->
 	  
     <div class="row">
       <div class="col-md-4"> 
-        <h2><i class="material-icons">email</i> Email / Correo electrónico</h2>
+	      <h2><i class="material-icons">email</i> Access your e-mail account</h2><h3> Acceda a su cuenta de correo electrónico</h3>
 		<!-- * Formal email to me with an attachment (image)
 * Write an email to me, attaching something from google drive -->
 	  </div>
       <div class="col-md-8">
         <a class="btn btn-success" href="https://www.linnbenton.edu/current-students/involvement/lbcc-student-email/">Email &raquo;</a>
         <br /><a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
-        <a class="btn btn-info" href="https://drive.google.com/file/d/13ykgG7Vx1dRRbR8UjwYOhagt1vouWELe/view?usp=sharing">Instructions for sending your teacher an email</a>
       </div> 
-	</div>
+    </div>
+    <div class="row">
+      <div class="col-md-4"> 
+	      <h2><i class="material-icons">speaker_notes</i> If time, e-mail vocabulary</h2><h3>Si hay tiempo, vocabulario sobre correo electrónico</h3>
+      </div>
+      <div class="col-md-8">
+        <a class="btn btn-success" href="https://quizlet.com/160522289/email-vocabulary-combined-15-terms-flash-cards/">Tarjetas de memoria &raquo;</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4"> 
+	      <h2><i class="material-icons">speaker_notes</i> If time, e-mail tutorial</h2><h3>Si hay tiempo, tutorial sobre correo electrónico</h3>
+      </div>
+      <div class="col-md-8">
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/es/crear-un-correo-electronico/enviar-un-mensaje-de-correo-electronico/1/">Tutorial en español &raquo;</a>
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/gmail/sending-email/1/">Tutorial in English &raquo;</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4"> 
+	      <h2><i class="material-icons">business_center</i> Write a formal email</h2><h3>Escriba un correo electrónico formal</h3>
+      </div>
+      <div class="col-md-8">
+	      <a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1w2pnyuY5GDD02N0l_fjQ_8MVJF1ir4pc29jj273AVOw/edit?usp=sharing">Instructions for writing a formal email</a>
+      </div>
+
+    </div>
 	  <!-- Extras:
-* https://quizlet.com/160522289/email-vocabulary-combined-15-terms-flash-cards/ -->
 	  
     <div class="row">
       <div class="col-md-4"> 
@@ -88,3 +119,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   </body>
 </html>
+
