--- a/index.html
+++ b/index.html
@@ -98,14 +98,13 @@
       </div>
 
     </div>
-	  <!-- Extras:
-	  
     <div class="row">
       <div class="col-md-4"> 
-        <h2><i class="material-icons">insert_drive_file</i> Google Docs</h2>
+	      <h2><i class="material-icons">attach_file</i> If time, attachments</h2><h3>Si hay tiempo, archivos adjuntos</h3>
       </div>
 	  <div class="col-md-8">
         <a class="btn btn-success" href="https://drive.google.com">Google Docs &raquo;</a>
+        <a class="btn btn-success" href="https://images.google.com">Google Image Search &raquo;</a>
       </div> 
     </div> <!-- row -->
 
