--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
       </div>
 	  <div class="col-md-8">
         <a class="btn btn-success" href="https://drive.google.com">Google Docs &raquo;</a>
-        <a class="btn btn-success" href="https://images.google.com">Google Image Search &raquo;</a>
+        <a class="btn btn-success" href="https://images.google.com">Google Image Search &raquo;</a><br />
+	<a class="btn btn-info" href="https://docs.google.com/document/d/1L_WAMO4dUdxgbajTgF8TFStwBwk0epk746THuY99VOM/edit?usp=sharing">Instructions for sending your teacher an email with attachments</a>
       </div> 
     </div> <!-- row -->
 
