--- a/index.html
+++ b/index.html
@@ -103,12 +103,20 @@
 	      <h2><i class="material-icons">attach_file</i> If time, attachments</h2><h3>Si hay tiempo, archivos adjuntos</h3>
       </div>
 	  <div class="col-md-8">
-        <a class="btn btn-success" href="https://drive.google.com">Google Docs &raquo;</a>
         <a class="btn btn-success" href="https://images.google.com">Google Image Search &raquo;</a><br />
 	<a class="btn btn-info" href="https://docs.google.com/document/d/1L_WAMO4dUdxgbajTgF8TFStwBwk0epk746THuY99VOM/edit?usp=sharing">Instructions for sending your teacher an email with attachments</a>
       </div> 
     </div> <!-- row -->
 
+    <div class="row">
+      <div class="col-md-4"> 
+	      <h2><i class="material-icons">attach_file</i> If time, attach a Google Drive document</h2><h3>Si hay tiempo, adjunte un archivo de Google Drive</h3>
+      </div>
+	  <div class="col-md-8">
+        <a class="btn btn-success" href="https://drive.google.com">Google Docs &raquo;</a>
+	<a class="btn btn-info" href="https://drive.google.com/file/d/1uR7mWMuv3mr3i-ZyHci6EYeEw9vAdpfn/view?usp=sharing">Instructions for creating a Google Doc</a>
+      </div> 
+    </div> <!-- row -->
 
 
   </div> <!-- container -->
