--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	      <h2><i class="material-icons">attach_file</i> If time, attach a Google Drive document</h2><h3>Si hay tiempo, adjunte un archivo de Google Drive</h3>
       </div>
 	  <div class="col-md-8">
-        <a class="btn btn-success" href="https://drive.google.com">Google Docs &raquo;</a>
+        <a class="btn btn-success" href="https://drive.google.com">Google Docs &raquo;</a><br />
 	<a class="btn btn-info" href="https://drive.google.com/file/d/1uR7mWMuv3mr3i-ZyHci6EYeEw9vAdpfn/view?usp=sharing">Instructions for creating a Google Doc</a>
       </div> 
     </div> <!-- row -->
