--- a/index.html
+++ b/index.html
@@ -49,8 +49,24 @@
 -->
 
     </nav>
+	  
+	  
   <main role="main" style="margin-top: 100px;">
   <div class="container">
+	  
+   <div class="row">
+      <div class="col-md-4"> 
+	      <h2><i class="material-icons">email</i> Access your e-mail account</h2><h3> Acceda a su cuenta de correo electrónico</h3>
+		<!-- * Formal email to me with an attachment (image)
+* Write an email to me, attaching something from google drive -->
+	  </div>
+      <div class="col-md-8">
+        <a class="btn btn-success" href="https://www.linnbenton.edu/current-students/involvement/lbcc-student-email/">Email &raquo;</a>
+        <br /><a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
+      </div> 
+    </div>
+
+	  
     <div class="row">
       <div class="col-md-4"> 
 	      <h2><i class="material-icons">keyboard</i> Take your typing test </h2><h3>Tome su prueba de mecanografía</h3>
@@ -63,23 +79,49 @@
 	  
     <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">email</i> Access your e-mail account</h2><h3> Acceda a su cuenta de correo electrónico</h3>
-		<!-- * Formal email to me with an attachment (image)
-* Write an email to me, attaching something from google drive -->
-	  </div>
+	      <h2><i class="material-icons">speaker_notes</i> Vocabulary about online navigation </h2><h3>Vocabulario sobre Navegación en línea</h3>
+      </div>
       <div class="col-md-8">
-        <a class="btn btn-success" href="https://www.linnbenton.edu/current-students/involvement/lbcc-student-email/">Email &raquo;</a>
-        <br /><a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1osSN1o2_Pc3L2-Mk0yP0KlPmT72r3XfCIpdESkLCEMc/edit?usp=sharing">Instructions for your email</a>
-      </div> 
+        <a class="btn btn-success" href="https://quizlet.com/130906566/online-navigation-navegacion-en-linea-flash-cards/">Tarjetas de memoria &raquo;</a>
+     </div>
+    </div> <!-- row -->
+     <div class="row">
+      <div class="col-md-4"> 
+	      <h2><i class="material-icons">tab</i> Chrome tutorial</h2><h3>Tutorial sobre Chrome</h3>
+      </div>
+      <div class="col-md-8">
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/es/como-usar-chrome/bienvenido-a-chrome/1/">Tutorial en español &raquo;</a>
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/chrome/">Tutorial in English &raquo;</a>
+      </div>
     </div>
+
     <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">speaker_notes</i> If time, e-mail vocabulary</h2><h3>Si hay tiempo, vocabulario sobre correo electrónico</h3>
+	      <h2><i class="material-icons">tab</i> If time, Google Hangouts</h2><h3>Si hay tiempo, Google Hangouts</h3>
       </div>
       <div class="col-md-8">
-        <a class="btn btn-success" href="https://quizlet.com/160522289/email-vocabulary-combined-15-terms-flash-cards/">Tarjetas de memoria &raquo;</a>
+        <a class="btn btn-success" href="https://www.youtube.com/watch?v=xHFt82ZqeXo&feature=youtu.be">Tutorial en español &raquo;</a>
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/googlehangouts/">Tutorial in English &raquo;</a>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-4"> 
+	      <h2><i class="material-icons">business_center</i> Write a formal email to your teacher about what you have learned</h2><h3>Escriba un correo electrónico formal a su maestra sobre lo que ha aprendido.</h3>
+      </div>
+      <div class="col-md-8">
+	      <a class="btn btn-info" href="https://docs.google.com/a/linnbenton.edu/document/d/1w2pnyuY5GDD02N0l_fjQ_8MVJF1ir4pc29jj273AVOw/edit?usp=sharing">Instructions for writing a formal email</a>
+      </div>
+
+    </div>
+
+	  <!--- done -->
+	  
+	  
+	  
+	  
+	  
+	  
     <div class="row">
       <div class="col-md-4"> 
 	      <h2><i class="material-icons">speaker_notes</i> If time, e-mail tutorial</h2><h3>Si hay tiempo, tutorial sobre correo electrónico</h3>
@@ -114,7 +156,7 @@
       </div>
 	  <div class="col-md-8">
         <a class="btn btn-success" href="https://drive.google.com">Google Docs &raquo;</a><br />
-	<a class="btn btn-info" href="https://drive.google.com/file/d/1uR7mWMuv3mr3i-ZyHci6EYeEw9vAdpfn/view?usp=sharing">Instructions for creating a Google Doc</a>
+	<a class="btn btn-info" href="https://drive.google.com/file/d/1uR7mWMuv3mr3i-ZyHci6EYeEw9vAdpfn/view?usp=sharin">Instructions for creating a Google Doc</a>
       </div> 
     </div> <!-- row -->
 
