--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">tab</i> If time, Google Hangouts</h2><h3>Si hay tiempo, Google Hangouts</h3>
+	      <h2><i class="material-icons">chat</i> If time, Google Hangouts</h2><h3>Si hay tiempo, Google Hangouts</h3>
       </div>
       <div class="col-md-8">
         <a class="btn btn-success" href="https://www.youtube.com/watch?v=xHFt82ZqeXo&feature=youtu.be">Tutorial en español &raquo;</a>
