--- a/index.html
+++ b/index.html
@@ -79,32 +79,32 @@
 	  
     <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">speaker_notes</i> Vocabulary about online navigation </h2><h3>Vocabulario sobre Navegación en línea</h3>
+	      <h2><i class="material-icons">speaker_notes</i> Windows Desktop Vocabulary </h2><h3>Vocabulario sobre el escritorio de Windows</h3>
       </div>
       <div class="col-md-8">
-        <a class="btn btn-success" href="https://quizlet.com/130906566/online-navigation-navegacion-en-linea-flash-cards/">Tarjetas de memoria &raquo;</a>
+        <a class="btn btn-success" href="https://quizlet.com/96703063/windows-desktop-vocabulary-flash-cards/">Tarjetas de memoria &raquo;</a>
      </div>
     </div> <!-- row -->
      <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">tab</i> Chrome tutorial</h2><h3>Tutorial sobre Chrome</h3>
+	      <h2><i class="material-icons">tab</i> Windows tutorial</h2><h3>Tutorial sobre Windows</h3>
       </div>
       <div class="col-md-8">
-        <a class="btn btn-success" href="https://edu.gcfglobal.org/es/como-usar-chrome/bienvenido-a-chrome/1/">Tutorial en español &raquo;</a>
-        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/chrome/">Tutorial in English &raquo;</a>
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/es/como-usar-windows-10/que-es-el-area-de-notificaciones-de-windows-10/1/">Tutorial en español &raquo;</a>
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/windowsbasics/">Tutorial in English &raquo;</a>
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">chat</i> If time, Google Hangouts</h2><h3>Si hay tiempo, Google Hangouts</h3>
+	      <h2><i class="material-icons">attach_file</i> If time, attachments</h2><h3>Si hay tiempo, archivos adjuntos</h3>
       </div>
-      <div class="col-md-8">
-        <a class="btn btn-success" href="https://www.youtube.com/watch?v=xHFt82ZqeXo&feature=youtu.be">Tutorial en español &raquo;</a>
-        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/googlehangouts/">Tutorial in English &raquo;</a>
-      </div>
-    </div>
+	  <div class="col-md-8">
+        <a class="btn btn-success" href="https://images.google.com">Google Image Search &raquo;</a><br />
+	<a class="btn btn-info" href="https://docs.google.com/document/d/1L_WAMO4dUdxgbajTgF8TFStwBwk0epk746THuY99VOM/edit?usp=sharing">Instructions for sending your teacher an email with attachments</a>
+      </div> 
+    </div> <!-- row -->
 
+	  
     <div class="row">
       <div class="col-md-4"> 
 	      <h2><i class="material-icons">business_center</i> Write a formal email to your teacher about what you have learned</h2><h3>Escriba un correo electrónico formal a su maestra sobre lo que ha aprendido.</h3>
@@ -120,15 +120,6 @@
 	  
 	  
 	  
-    <div class="row">
-      <div class="col-md-4"> 
-	      <h2><i class="material-icons">attach_file</i> If time, attachments</h2><h3>Si hay tiempo, archivos adjuntos</h3>
-      </div>
-	  <div class="col-md-8">
-        <a class="btn btn-success" href="https://images.google.com">Google Image Search &raquo;</a><br />
-	<a class="btn btn-info" href="https://docs.google.com/document/d/1L_WAMO4dUdxgbajTgF8TFStwBwk0epk746THuY99VOM/edit?usp=sharing">Instructions for sending your teacher an email with attachments</a>
-      </div> 
-    </div> <!-- row -->
 
     <div class="row">
       <div class="col-md-4"> 
