--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
   <main role="main" style="margin-top: 100px;">
   <div class="container">
 	  
+    <div class="row">
+      <div class="col-md-4"> 
+	      <h2><i class="material-icons">keyboard</i> Special guest </h2><h3>Invitada especial</h3>
+      </div>
+      <div class="col-md-8">
+Elizabeth Pakravan
+     </div>
+    </div> <!-- row -->
+
+	  
+	  
    <div class="row">
       <div class="col-md-4"> 
 	      <h2><i class="material-icons">email</i> Access your e-mail account</h2><h3> Acceda a su cuenta de correo electrónico</h3>
@@ -77,7 +88,8 @@
      </div>
     </div> <!-- row -->
 	  
-    <div class="row">
+
+<div class="row">
       <div class="col-md-4"> 
 	      <h2><i class="material-icons">speaker_notes</i> Windows Desktop Vocabulary </h2><h3>Vocabulario sobre el escritorio de Windows</h3>
       </div>
