--- a/index.html
+++ b/index.html
@@ -91,30 +91,24 @@ Elizabeth Pakravan
 
 <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">speaker_notes</i> Windows Desktop Vocabulary </h2><h3>Vocabulario sobre el escritorio de Windows</h3>
+	      <h2><i class="material-icons">speaker_notes</i> Create a poster in Publisher</h2><h3>Crear un cartel con Publisher</h3>
       </div>
       <div class="col-md-8">
-        <a class="btn btn-success" href="https://quizlet.com/96703063/windows-desktop-vocabulary-flash-cards/">Tarjetas de memoria &raquo;</a>
+        <a class="btn btn-info" href="https://docs.google.com/document/d/16_jkixGzPgfMW0r3jbqxy1epkW5VRHBPr0NVqdAldfE/edit?usp=sharing">Publisher Instructions</a>
      </div>
     </div> <!-- row -->
+	  
+	  
      <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">tab</i> Windows tutorial</h2><h3>Tutorial sobre Windows</h3>
+	      <h2><i class="material-icons">tab</i> If time, Excel tutorial</h2><h3>Si hay tiempo, Tutorial sobre Excel</h3>
       </div>
       <div class="col-md-8">
-        <a class="btn btn-success" href="https://edu.gcfglobal.org/es/como-usar-windows-10/que-es-el-area-de-notificaciones-de-windows-10/1/">Tutorial en español &raquo;</a>
-        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/windowsbasics/">Tutorial in English &raquo;</a>
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/es/excel-2016/como-crear-un-nuevo-archivo-en-excel-2016/1/">Tutorial en español &raquo;</a>
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/excel2016/getting-started-with-excel/1/">Tutorial in English &raquo;</a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-4"> 
-	      <h2><i class="material-icons">attach_file</i> If time, attachments</h2><h3>Si hay tiempo, archivos adjuntos</h3>
-      </div>
-	  <div class="col-md-8">
-        <a class="btn btn-success" href="https://images.google.com">Google Image Search &raquo;</a><br />
-	<a class="btn btn-info" href="https://docs.google.com/document/d/1L_WAMO4dUdxgbajTgF8TFStwBwk0epk746THuY99VOM/edit?usp=sharing">Instructions for sending your teacher an email with attachments</a>
-      </div> 
-    </div> <!-- row -->
+
 
 	  
     <div class="row">
