--- a/index.html
+++ b/index.html
@@ -54,16 +54,7 @@
   <main role="main" style="margin-top: 100px;">
   <div class="container">
 	  
-    <div class="row">
-      <div class="col-md-4"> 
-	      <h2><i class="material-icons">keyboard</i> Special guest </h2><h3>Invitada especial</h3>
-      </div>
-      <div class="col-md-8">
-Elizabeth Pakravan
-     </div>
-    </div> <!-- row -->
-
-	  
+ 	  
 	  
    <div class="row">
       <div class="col-md-4"> 
@@ -91,10 +82,10 @@ Elizabeth Pakravan
 
 <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">speaker_notes</i> Create a poster in Publisher</h2><h3>Crear un cartel con Publisher</h3>
+	      <h2><i class="material-icons">business_center</i> Create a resume</h2><h3>Crear un resume</h3>
       </div>
       <div class="col-md-8">
-        <a class="btn btn-info" href="https://docs.google.com/document/d/16_jkixGzPgfMW0r3jbqxy1epkW5VRHBPr0NVqdAldfE/edit?usp=sharing">Publisher Instructions</a>
+        <a class="btn btn-info" href="https://linnbenton.emsicc.com/sign-up">Career Coach</a>
      </div>
     </div> <!-- row -->
 	  
@@ -106,6 +97,16 @@ Elizabeth Pakravan
       <div class="col-md-8">
         <a class="btn btn-success" href="https://edu.gcfglobal.org/es/excel-2016/como-crear-un-nuevo-archivo-en-excel-2016/1/">Tutorial en español &raquo;</a>
         <a class="btn btn-success" href="https://edu.gcfglobal.org/en/excel2016/getting-started-with-excel/1/">Tutorial in English &raquo;</a>
+      </div>
+    </div>
+
+     <div class="row">
+      <div class="col-md-4"> 
+	      <h2><i class="material-icons">tab</i> If time, resume tutorial</h2><h3>Si hay tiempo, Tutorial sobre resumes</h3>
+      </div>
+      <div class="col-md-8">
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/es/mundo-laboral/como-hacer-una-hoja-de-vida/1/">Tutorial en español &raquo;</a>
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/resumewriting/">Tutorial in English &raquo;</a>
       </div>
     </div>
 
