--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	  
 	  
 	  
-	  
+	  <!--
 
     <div class="row">
       <div class="col-md-4"> 
@@ -136,7 +136,7 @@
         <a class="btn btn-success" href="https://drive.google.com">Google Docs &raquo;</a><br />
 	<a class="btn btn-info" href="https://drive.google.com/file/d/1uR7mWMuv3mr3i-ZyHci6EYeEw9vAdpfn/view?usp=sharin">Instructions for creating a Google Doc</a>
       </div> 
-    </div> <!-- row -->
+    </div> --><!-- row -->
 
 
   </div> <!-- container -->
