--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	      <h2><i class="material-icons">business_center</i> Create a resume</h2><h3>Crear un resume</h3>
       </div>
       <div class="col-md-8">
-        <a class="btn btn-info" href="https://linnbenton.emsicc.com/sign-up">Career Coach</a>
+        <a class="btn btn-success" href="https://linnbenton.emsicc.com/sign-up">Career Coach &raquo;</a>
      </div>
     </div> <!-- row -->
 	  
