--- a/index.html
+++ b/index.html
@@ -82,32 +82,22 @@
 
 <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">business_center</i> Create a resume</h2><h3>Crear un resume</h3>
+	      <h2><i class="material-icons">insert_drive_file</i> Create a word document</h2><h3>Crear un documento Word</h3>
       </div>
       <div class="col-md-8">
-        <a class="btn btn-success" href="https://linnbenton.emsicc.com/sign-up">Career Coach &raquo;</a>
+        <a class="btn btn-info" href="https://docs.google.com/document/d/15bU4CBHYC1EOiwZZLkL9wUssEIBvS7h9B-2_I_V69Ww/edit">Instructions</a>
      </div>
     </div> <!-- row -->
 	  
 	  
-     <div class="row">
+    <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">tab</i> If time, Excel tutorial</h2><h3>Si hay tiempo, Tutorial sobre Excel</h3>
+	      <h2><i class="material-icons">business_center</i> Edit an Excel budget</h2><h3>Revisar un presupuesto en Excel</h3>
       </div>
       <div class="col-md-8">
-        <a class="btn btn-success" href="https://edu.gcfglobal.org/es/excel-2016/como-crear-un-nuevo-archivo-en-excel-2016/1/">Tutorial en español &raquo;</a>
-        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/excel2016/getting-started-with-excel/1/">Tutorial in English &raquo;</a>
+	      <a class="btn btn-info" href="example.com">Instructions</a>
       </div>
-    </div>
 
-     <div class="row">
-      <div class="col-md-4"> 
-	      <h2><i class="material-icons">tab</i> If time, resume tutorial</h2><h3>Si hay tiempo, Tutorial sobre resumes</h3>
-      </div>
-      <div class="col-md-8">
-        <a class="btn btn-success" href="https://edu.gcfglobal.org/es/mundo-laboral/como-hacer-una-hoja-de-vida/1/">Tutorial en español &raquo;</a>
-        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/resumewriting/">Tutorial in English &raquo;</a>
-      </div>
     </div>
 
 
