--- a/index.html
+++ b/index.html
@@ -79,27 +79,30 @@
      </div>
     </div> <!-- row -->
 	  
-
-<div class="row">
+	  
+	      <div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">insert_drive_file</i> Create a word document</h2><h3>Crear un documento Word</h3>
+	      <h2><i class="material-icons">cloud</i> The cloud </h2><h3>La nube</h3>
       </div>
       <div class="col-md-8">
-        <a class="btn btn-info" href="https://docs.google.com/document/d/15bU4CBHYC1EOiwZZLkL9wUssEIBvS7h9B-2_I_V69Ww/edit">Instructions</a>
+        <a class="btn btn-info" href="https://www.google.com/about/datacenters/gallery/index.html#/locations/the-dalles">Google Data Center in The Dalles</a>
      </div>
     </div> <!-- row -->
 	  
-	  
-    <div class="row">
+
+	<div class="row">
       <div class="col-md-4"> 
-	      <h2><i class="material-icons">business_center</i> Edit an Excel budget</h2><h3>Revisar un presupuesto en Excel</h3>
+	      <h2><i class="material-icons">insert_drive_file</i> Create a Google Doc</h2><h3>Crear un Google Doc</h3>
       </div>
       <div class="col-md-8">
-	      <a class="btn btn-info" href="example.com">Instructions</a>
-      </div>
+        <a class="btn btn-success" href="https://drive.google.com">Google Drive &raquo;</a>
+     </div>
+    </div> <!-- row -->
+	  
 
-    </div>
-
+	  
+	  
+  
 
 	  
     <div class="row">
