--- a/index.html
+++ b/index.html
@@ -88,7 +88,15 @@
         <a class="btn btn-info" href="https://www.google.com/about/datacenters/gallery/index.html#/locations/the-dalles">Google Data Center in The Dalles</a>
      </div>
     </div> <!-- row -->
-	  
+
+	       <div class="row">
+      <div class="col-md-4"> 
+	      <h2><i class="material-icons">tab</i> If time, Google Drive tutorial</h2><h3>Si hay tiempo, Tutorial sobre Google Drive</h3>
+      </div>
+      <div class="col-md-8">
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/en/googledriveanddocs/">Tutorial en español &raquo;</a>
+        <a class="btn btn-success" href="https://edu.gcfglobal.org/es/como-funciona-la-nube/como-subir-un-archivo-a-google-drive/1/">Tutorial in English &raquo;</a>
+      </div>
 
 	<div class="row">
       <div class="col-md-4"> 
