--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
       <div class="col-md-4"> 
 	      <h2><i class="material-icons">cloud</i> The cloud </h2><h3>La nube</h3>
       </div>
-      <div class="col-md-8">
+      <div class="col-md-8"> 
+        <a class="btn btn-info" href="https://edu.gcfglobal.org/es/como-funciona-la-nube/la-nube/1/">Video</a>
         <a class="btn btn-info" href="https://www.google.com/about/datacenters/gallery/index.html#/locations/the-dalles">Google Data Center in The Dalles</a>
      </div>
     </div> <!-- row -->
