--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <a class="btn btn-success" href="https://edu.gcfglobal.org/en/googledriveanddocs/">Tutorial en español &raquo;</a>
         <a class="btn btn-success" href="https://edu.gcfglobal.org/es/como-funciona-la-nube/como-subir-un-archivo-a-google-drive/1/">Tutorial in English &raquo;</a>
       </div>
+		     </div> <!-- row -->
 
 	<div class="row">
       <div class="col-md-4"> 
